style.css
/* 
primary color: #800000 (maroon), #8f8f8f (grey), #f5deb3 (wheat), #000000 (black)

secondary color: #ffa600

Fonts: Gill Sans (sans-serif), Optima (sans-serif), Helvetica (sans-serif).

Font size: 12-16pt on a mobile screen, 15-19pt on a tablet, and 16-20pt on a desktop computer screen.(https://www.toptal.com/designers/typography/web-typography-infographic).

Small Breakpoint: 400px
Medium Breakpoint: 900px
Large Breakpoint: 1200px

//class intitlization
.Avatar{
  
}
//if the screen is between 0px and 400px, than do this
@media only screen and (min-width:0px) and (max-width:400px){
  .Avatar{
    //this example
    background-color: purple;
  }
}
//if the screen is between 400px and 900px, than do this
@media only screen and (min-width:400px) and (max-width:900px){
  .Avatar{
    //this example
    background-color: red;
  }
}
//if the screen is larger than 900px, than do this
@media only screen and (min-width:900px){
  .Avatar{
    //this example
    background-color: blue;
  }
}


*/

html, body {
  background-image: url("https://freepngimg.com/save/30788-claw-scratches/420x420");
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
  background-size: 50rem;
  background-color: #e8e8e8;
  height: 100%;
  width: 100%;
}

.pyscript-header {
  display: flex;
  width: 100%;
  padding: 1rem, 2rem;
}

.header-img1{
  display: flex;
  height: 100%;
  width:10%;
}

.header-img2{
  display: flex;
  height: 100%;
  width:10%;
}

.header-text {
  display: flex;
  font-family: verdana, sans-serif;
  font-size: 30px;
  -webkit-text-stroke: 3px black;
  color: white;
  font-weight: bolder;
}

.content{
  display: flex;
  flex-direction: row;
}

.left_content{
  max-width: 15rem;
  min-width: 10rem;
  margin-top: 1.5rem;
  padding: 1rem;
  background-color: gray;

}

.right_content{
  flex-grow: 1;
  padding: 1rem 2rem;
}


h2 {
  font-family: verdana, sans-serif;
  color: rgb(255, 255, 255);
  background-color: grey;
  padding: 0.5rem;
  text-align: center;
 
}



h3 {
  color: white;
  font-size: 30px;
  background-color: maroon;
  border-radius: 15px;
  padding: 0.5rem;
  text-align: center;
}

/* used for Day column. Ex, Monday, Tuesday, Wednesday, Thursday, Friday at the top of the calendar
*/

h4 {
  color: white;
  font-size: 30px;
  background-color: grey;
  padding: 0.5rem;
  text-align: left;
}
/* used for date number indicator at the top left of the box
*/
.h5 {
  color: white;
  font-size: 1px;
}

.calendar {
  background-color: gray;
  display: table;
  width: 100%;
  
}



.calendar-row{
  display: flex;
  justify-content: space-between;
  background-color: darkgrey;
  width: 18.5%;
  padding: 2px;
  
}

